quick fix for the progress visibility

--- a/packages/shower/themes/ribbon/styles/style.css
+++ b/packages/shower/themes/ribbon/styles/style.css
@@ -299,7 +299,7 @@ BODY {
 		display:none;
 		}
 	.full .slide {
-		position:relative;
+		position:absolute;
 		visibility:hidden;
 		}
 		.full .slide:target {
